<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_groups"
            android:icon="@mipmap/ic_group_black_48dp"
            android:title="@string/groups_activity_title" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@mipmap/ic_archive_black_48dp"
            android:title="@string/archive" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings_black_48dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help_feedback"
                android:icon="@mipmap/ic_info_black_48dp"
                android:title="@string/help_feedback" />
        </menu>
    </item>

</menu>
