<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/add_email"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialgo_add_email_subtitle"/>

    <EditText
        android:id="@+id/editText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:inputType="textEmailAddress|textMultiLine"
        android:minLines="1"
        android:gravity="top|start"
        android:hint="@string/email_hint"
        android:maxLines="10"
        android:scrollbars="vertical"/>


</LinearLayout>